--- a/Mei2025/tutorial 4.html
+++ b/Mei2025/tutorial 4.html
@@ -37,8 +37,7 @@ After some days, white the Shepherd boy was in the field with the herd of sheep,
 <br>
 <p>
 <font size 7 color = red >
-<u> Moral</u>
-<p>
+<u> Moral:</u>
 <font color = 00FF00 >
 <b><i> No one believes a liar even if they speak the truth once.</b></i>
 </font>
