--- a/Mei2025/tutorial 4.html
+++ b/Mei2025/tutorial 4.html
@@ -10,25 +10,33 @@ bgcolor=CCFFFF>
 
 <center>
 <p>
-<font face = Times New Roman size =5 color =red> Short story:
-</font>
-</p>
-<font face = Times New Roman size=5 color = FF6600>The Shepherd Boy and The Wolf 
-</font>
-</p>
-<br>
-<hr size=10 width = 400 nonshade color = 33FF3>
+
+<font face=Times New Roman size=5 color=red>
+Short Story:<font face=Times New Roman size=5 color=FFCCOO> <b>The Shepherd Boy and the Wolf </b></p>
 <br>
 
+<hr size=10 width=900 align left nonshade color=00FF00>
+
+<body>
 <p>
-A <b><i> Shepherd </b></i> boy in a village used to take his herd of sheep across the fields near the forest. He felt this job was very dull and wanted to have some fun.
+<font face=Times New Roman size=5 color=black>
+A <b><i><big>shepherd</b></i></big> boy in a village used to take his herd of sheep across the fields near the forest.<br>He felt this job was very dull and wanted to have some fun.
 </p>
+
+
+
 <p>
-the boy laughed and replied,"it was just fun. There is no wolf here". <b><i> The boy played a similar trick repeatedly for many days </b></i>
+One day while <u>grazing</u> the sheep, he shouted, "Wolf!Wolf!The wolf is carrying<br> away a lamb!" Farmers working in the nearby fields came running for help but<br>didn't find any wolf.
 </p>
+
 <p>
-After some days, white the Shepherd boy was in the field with the herd of sheep, suddenly, a wolf came out from the nearby forest and attacked one of the lambs. The boy was frightened and cried loudly, "Wolf!Wolf! <strike> The Wolf is carrying a lamb away!" </strike>
+The boy laughed and replied,"it was just fun. There is no wolf here"<br>.<b><i><big>The boy played a similar trick repeatedly for many days.</b></i></big>
 </p>
+
+<p>
+After some days, while the shepherd boy was in the field with the herd of sheep,<br> suddenly, a wolf came out from the nearby forest and attacked one of the lambs.<br>The boy was frightened and cried loudly. "Wolf!Wolf!<strike>The wolf is carrying a lamb away!"</strike>
+</p>
+
 <p>
 <font face= Times New Roman size =6 color = 9966FF ><strong> The farmers </strong> <sup> thought </sup> <strong> The boy was playing </strong> mischief <strong> again </strong>. Do, no one paid attention to him and didn't come to his help. 
 </font>
@@ -37,9 +45,7 @@ After some days, white the Shepherd boy was in the field with the herd of sheep,
 <br>
 <p>
 <font size 7 color = red >
-<u> Moral:</u>
-<font color = 00FF00 >
-<b><i> No one believes a liar even if they speak the truth once.</b></i>
+<u> Moral:</u><p><font color = 00FF00 ><b><i> No one believes a liar even if they speak the truth once.</b></i>
 </font>
 </p>
 </body>
