--- a/Mei2025/test.html
+++ b/Mei2025/test.html
@@ -1,12 +1,14 @@
 <html>
-<html>
 <head>
-<title>To Do List</title>
-</head>
-<body>
+<title>kitty Website</title>
 
+<link rel=icon href=daisy.jpg type=image/jpg>
+<meta name=viewport content=width=device-width,initial-scale=1.0>
+</head>
+<body topmargin=20 leftmargin=50>
+ 
 <h1>Introduction of List Tag</h1>
-<h2>To Do LIst:</h2>
+<h2>To Do List:</h2>
 
 <OL>
 <font color = red>
@@ -15,7 +17,7 @@
 </LI>
 
  <UL>
-<LI>DCS1003 - Information TechnOLogy & AppLIcation</LI>
+<LI>DCS1003 - Information Technology & Application</LI>
 <LI>DCS3003 - Website Design</LI>
 </UL>
 </LI>
