--- a/Mei2025/activity 5.html
+++ b/Mei2025/activity 5.html
@@ -1,77 +1,58 @@
+<html>
 <head>
-<title>kitty Website</title>
-
-<link rel=icon href=daisy.jpg type=image/jpg>
-<meta name=viewport content=width=device-width,initial-scale=1.0>
+  <title>Kitty Website</title>
+  <link rel="icon" href="daisy.jpg" type="image/jpg">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
 </head>
-<body topmargin=20 leftmargin=50 background=images.jpeg>
 
-<hr size=4 color=33FF33 width=50%>
-<h1 align=center><font color=White ><b>Introduction to Famous Sculpture Artists</b></h1>
-<hr size=4 color=33FF33 width=50%>
-</font>
+<body topmargin="20" leftmargin="50" background="images.jpeg">
 
-<br><br>
-<h2 align=left><font color=FFFFCC size=8><b>Michelangelo (1475–1564, Italy)</b></font></h2>
-<img src="download (1).jpeg" height=150 width=220 border=6 align=left>
+  <hr size="4" color="#33FF33" width="50%">
+  <h1 align="center"><font color="white"><b>Introduction to Famous Sculpture Artists</b></font></h1>
+  <hr size="4" color="#33FF33" width="50%">
 
-<font color=white size=5>
+  <br><br>
+  <h2 align="left"><font color="#FFFFCC" size="8"><b>Michelangelo (1475–1564, Italy)</b></font></h2>
+  <img src="download (1).jpeg" height="150" width="220" border="6" align="left">
+  <font color="white" size="5">
+    <p>Michelangelo di Lodovico Buonarroti Simoni was an Italian Renaissance artist and one of the greatest sculptors of all time. Known for his mastery of anatomy and emotional depth, he shaped the course of Western art.</p>
+    <p><b>Famous works:</b></p>
+    <ul>
+      <li><em><b>David</b></em>: A marble statue symbolizing human strength and beauty.</li>
+      <li><em><b>Pietà</b></em>: A masterpiece of the Virgin Mary holding the body of Jesus Christ, filled with emotion.</li>
+      <li><em><b>Moses</b></em>: A powerful sculpture of Moses, showing Michelangelo's skill in form.</li>
+    </ul>
+  </font>
 
-<p>Michelangelo di Lodovico Buonarroti Simoni was an Italian Renaissance artist and one of the greatest sculptors of all time. Known for his mastery of anatomy and emotional depth, he shaped the course of Western art.</p>
-<p><b>Famous works:</b> </font>
- 
- <ul>
-<font color=white size=5>
+  <br><br><br>
 
-     <li><em><b>David</em>: A marble statue symbolizing human strength and beauty.</b></li>
-      <li><em><b>Pietà</em>: A masterpiece of the Virgin Mary holding the body of Jesus Christ, filled with emotion.</b></li>
-      <li><em><b>Moses</em>: A powerful sculpture depicting the biblical figure Moses, showing Michelangelo's mastery of human form.</b></li>
- </ul>
-</p>
-</font>
-<br>
+  <h3 align="right"><font color="#CCFFFF" size="8"><b>Auguste Rodin (1840–1917, France)</b></font></h3>
+  <img src="download (2).jpeg" height="150" width="220" border="6" align="right">
+  <font color="#00FF00" size="5">
+    <p><b>Rodin is considered the father of modern sculpture. His works capture emotion and realism beyond traditional forms.</b></p>
+    <p><b>Famous works:</b></p>
+  </font>
+  <font color="white" size="5">
+    <ul>
+      <li><em>The Thinker</em>: A man in deep contemplation, symbolizing intellectual struggle.</li>
+      <li><em>The Kiss</em>: A romantic sculpture of two lovers embracing.</li>
+      <li><em>The Burghers of Calais</em>: Shows the sacrifice of six citizens during wartime.</li>
+    </ul>
+  </font>
 
-<br>
-<h3 align=right><font color=CCFFFF size=8><b>Auguste Rodin (1840–1917, France)</b></h3>
-<img src="download (2).jpeg" height=150 width=220 border=6 align=right>
+  <br><br><br>
 
-<font color=00FF00 size=5>
-
-<p><b>Auguste Rodin is often considered the father of modern sculpture. His expressive, emotionally-charged works break from traditional styles, emphasizing realism and capturing human emotions.</b></p>
-<p><b><Famous works:</b> </font>
-
-
-<ul>
-<font color=white size=5>
-
-    <li><em>The Thinker</em>: A man in deep contemplation, symbolizing intellectual struggle.</li>
-    <li><em>The Kiss</em>: A sensual sculpture capturing the passionate embrace of two lovers.</li>
-    <li><em>The Burghers of Calais</em>: A depiction of six citizens of Calais, symbolizing sacrifice and heroism during the Hundred Years' War.</li>
-  </ul>
-</p>
-</font>
-<br>
-
-
-<br>
-<h4 align=left><font color=FFCCCC size=8><b>Anish Kapoor (1954–present, India/UK)</b></h4>
-<img src="images (2).jpeg" height=150 width=220 border=6 align=left>
-
-<font color=white size=5>
-
-<p>Anish Kapoor is a contemporary British-Indian sculptor known for his large-scale, abstract public sculptures. His works often use reflective surfaces and geometric shapes, creating a unique visual experience for viewers.</p>
-<p><b>Famous works:</b></font>
- 
-  <ul>
-<font color=white size=5>
-
- <li><em>Cloud Gate (The Bean)</em>: A reflective stainless steel sculpture in Chicago, blending the environment with the viewer.</li>
-    <li><em>Sky Mirror</em>: A concave reflective surface that changes the way we see the sky and surrounding landscape.</li>
-    <li><em>Descent into Limbo</em>: A dark circular pit symbolizing absence and emptiness, inviting reflection on the unknown.</li>
-  </ul>
-</p>
-</font>
+  <h4 align="left"><font color="#FFCCCC" size="8"><b>Anish Kapoor (1954–present, India/UK)</b></font></h4>
+  <img src="images (2).jpeg" height="150" width="220" border="6" align="left">
+  <font color="white" size="5">
+    <p>Anish Kapoor is a British-Indian sculptor known for large-scale, reflective, abstract installations that challenge perception.</p>
+    <p><b>Famous works:</b></p>
+    <ul>
+      <li><em>Cloud Gate (The Bean)</em>: A shiny sculpture in Chicago reflecting the skyline and people.</li>
+      <li><em>Sky Mirror</em>: A concave mirror that reflects the sky and surroundings.</li>
+      <li><em>Descent into Limbo</em>: A dark pit artwork symbolizing emptiness and the unknown.</li>
+    </ul>
+  </font>
 
 </body>
 </html>
-
