--- a/tutorial/activity 5.html
+++ b/tutorial/activity 5.html
@@ -32,7 +32,7 @@
 <br>
 
 <br>
-<h3 align=right><font color=CCFFFF size=8><b>Auguste Rodin (1840–1917, France)</b></h3>
+<h3 align=right><font color=CC0000 size=8><b>Auguste Rodin (1840–1917, France)</b></h3>
 <img src="AUGUSTE.jpeg" height=150 width=220 border=6 align=right>
 
 <font color=00FF00 size=5>
@@ -74,4 +74,5 @@
 
 </body>
 </html>
+
 
