--- a/tutorial/activity 5.html
+++ b/tutorial/activity 5.html
@@ -1,7 +1,7 @@
 <head>
 <title>kitty Website</title>
 
-<link rel=icon href=daisy.jpg type=image/jpg>
+<link rel="icon" href="daisy.jpg" type="image/jpg">
 <meta name=viewport content=width=device-width,initial-scale=1.0>
 </head>
 <body topmargin=20 leftmargin=50 background=images.jpeg>
