--- a/tutorial/activity 5.html
+++ b/tutorial/activity 5.html
@@ -4,7 +4,7 @@
 <link rel="icon" href="daisy.jpg" type="image/jpg">
 <meta name=viewport content=width=device-width,initial-scale=1.0>
 </head>
-<body topmargin=20 leftmargin=50 background=images.jpeg>
+<body topmargin=20 leftmargin=50 background="images.jpeg">
 
 <hr size=4 color=33FF33 width=50%>
 <h1 align=center><font color=White ><b>Introduction to Famous Sculpture Artists</b></h1>
