--- a/lesson5.html
+++ b/lesson5.html
@@ -8,15 +8,12 @@
   <style>
     body {
       margin: 20px 50px;
-      background-image: url('images.jpeg');
+      background-image: url('images.jpg');
       background-size: cover;
       background-attachment: fixed;
       background-position: center;
       color: white;
       font-family: Arial, sans-serif;
-    }
-    h1, h2, h3, h4 {
-      margin-top: 40px;
     }
     h1 {
       text-align: center;
@@ -27,7 +24,7 @@
       height: 4px;
       background-color: #33FF33;
       width: 50%;
-      margin: auto;
+      margin: 20px auto;
     }
     .artist-section {
       margin-top: 40px;
@@ -40,30 +37,31 @@
       width: 220px;
       height: 150px;
     }
-    .artist-section.right .artist-image {
+    .right .artist-image {
       float: right;
       margin-left: 20px;
       margin-right: 0;
     }
     .artist-name {
-      font-size: 2.5em;
+      font-size: 2em;
       font-weight: bold;
+      margin-top: 0;
     }
     ul {
       margin-top: 10px;
     }
   </style>
 </head>
-
 <body>
 
   <hr>
   <h1>Introduction to Famous Sculpture Artists</h1>
   <hr>
 
+  <!-- Michelangelo -->
   <div class="artist-section">
     <h2 class="artist-name" style="color: #FFFFCC;">Michelangelo (1475–1564, Italy)</h2>
-    <img src="MICHAEL.jpeg" alt="Michelangelo" class="artist-image">
+    <img src="MICHAEL.jpg" alt="Michelangelo" class="artist-image">
     <p>Michelangelo di Lodovico Buonarroti Simoni was an Italian Renaissance artist and one of the greatest sculptors of all time. Known for his mastery of anatomy and emotional depth, he shaped the course of Western art.</p>
     <p><b>Famous works:</b></p>
     <ul>
@@ -73,9 +71,10 @@
     </ul>
   </div>
 
+  <!-- Auguste Rodin -->
   <div class="artist-section right">
-    <h2 class="artist-name" style="color: #CCFFFF; text-align: right;">Auguste Rodin (1840–1917, France)</h2>
-    <img src="AUGUSTE.jpeg" alt="Auguste Rodin" class="artist-image">
+    <h2 class="artist-name" style="color: #CC0000; text-align: right;">Auguste Rodin (1840–1917, France)</h2>
+    <img src="AUGUSTE.jpg" alt="Auguste Rodin" class="artist-image">
     <p style="color: #00FF00;"><b>Auguste Rodin is often considered the father of modern sculpture. His expressive, emotionally-charged works break from traditional styles, emphasizing realism and capturing human emotions.</b></p>
     <p><b>Famous works:</b></p>
     <ul>
@@ -85,18 +84,18 @@
     </ul>
   </div>
 
+  <!-- Anish Kapoor -->
   <div class="artist-section">
     <h2 class="artist-name" style="color: #FFCCCC;">Anish Kapoor (1954–present, India/UK)</h2>
-    <img src="ANISH.jpeg" alt="Anish Kapoor" class="artist-image">
+    <img src="ANISH.jpg" alt="Anish Kapoor" class="artist-image">
     <p>Anish Kapoor is a contemporary British-Indian sculptor known for his large-scale, abstract public sculptures. His works often use reflective surfaces and geometric shapes, creating a unique visual experience for viewers.</p>
     <p><b>Famous works:</b></p>
     <ul>
       <li><em>Cloud Gate (The Bean)</em>: A reflective stainless steel sculpture in Chicago.</li>
-      <li><em>Sky Mirror</em>: A concave reflective surface changing perception of the sky.</li>
-      <li><em>Descent into Limbo</em>: A dark pit symbolizing absence and the unknown.</li>
+      <li><em>Sky Mirror</em>: A concave reflective surface changing how we see the sky and landscape.</li>
+      <li><em>Descent into Limbo</em>: A dark pit symbolizing emptiness and the unknown.</li>
     </ul>
   </div>
 
 </body>
 </html>
-
