--- a/tutorial/activity 5.html
+++ b/tutorial/activity 5.html
@@ -13,7 +13,7 @@
 
 <br><br>
 <h2 align=left><font color=FFFFCC size=8><b>Michelangelo (1475–1564, Italy)</b></font></h2>
-<img src="MICHAEL.jpg" height=150 width=220 border=6 align=left>
+<img src="MICHAEL.png" height=150 width=220 border=6 align=left>
 
 <font color=white size=5>
 
@@ -33,7 +33,7 @@
 
 <br>
 <h3 align=right><font color=CC0000 size=8><b>Auguste Rodin (1840–1917, France)</b></h3>
-<img src="AUGUSTE.jpg" height=150 width=220 border=6 align=right>
+<img src="AUGUSTE.png" height=150 width=220 border=6 align=right>
 
 <font color=00FF00 size=5>
 
@@ -55,7 +55,7 @@
 
 <br>
 <h4 align=left><font color=FFCCCC size=8><b>Anish Kapoor (1954–present, India/UK)</b></h4>
-<img src="ANISH.jpg" height=150 width=220 border=6 align=left>
+<img src="ANISH.png" height=150 width=220 border=6 align=left>
 
 <font color=white size=5>
 
