--- a/quiz/KOUSTHUBHA__DCS2409238__TESTING (1).HTML
+++ b/quiz/KOUSTHUBHA__DCS2409238__TESTING (1).HTML
@@ -8,7 +8,7 @@
 
 <h1><align=center><b><u>Easy Chicken Curry</b></u></h1>
 
-<body background="donald_duck.jpg">>
+<body background="download (2).jpeg">>
 
 <h2><i><font color=red <LI>Ingredients:</h2></i></LI>
 </font>
